# stay-awake

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  StayAwake.exe.manifest  Taskfile.yml  build.zig  build.zig.zon  compile_flags.txt  mise.toml  package.json  resource.rc  stay_awake.c
scripts/: prepare-release.ts
src/: app_state.h  config.c  config.h  main.c  power.c  power.h  tray.c  tray.h
